<resources>
    <string name="app_name">@string/platform_name</string>
    <string name="course_details_fb_group">Official course Facebook group</string>
    <string name="view_handouts">View course handouts</string>
    <string name="course_details_friends_in_course">Friends in this course</string>
    <string name="course_details_share">Share</string>
    <string name="course_details_congratulations">CONGRATULATIONS!</string>
    <string name="course_details_earned_cert">You’ve passed the course.</string>
    <string name="course_details_view_cert_button">View Certificate</string>
    <string name="friends_in_course">Friends in {courseName}</string>
    <string name="open_course_page">Open Course Page</string>
    <string name="friends_in_this_course">Friends in This Course</string>
    <string name="share_application_title">{platform_name} for Android</string>
    <string name="share_application_link_url">http://www.edx.org</string>
    <string name="share_application_picture_url">https://www.edx.org/sites/default/files/theme/edx-logo-header.png</string>
    <string name="share_application_description">Free online courses</string>
    <string name="course_detail_title">Course Detail</string>
    <string name="course_detail_enroll_now_button">Enroll now</string>
    <string name="enroll_now_button_text">Enroll now</string>
    <string name="view_course_button_text">View course</string>
    <string name="you_are_now_enrolled">You are now enrolled in this course.</string>
    <string name="already_enrolled">You are already enrolled in this course.</string>
    <string name="cannot_show_dashboard">Unable to show dashboard.</string>
    <string name="share_course_button">Share your course</string>
    <string name="share_course_popup_header">Share this course via&#8230;</string>
    <string name="share_course_message">I’m taking a course on {platform_name}! Check it out:</string>
    <string name="settings_wifi_top">Wi-Fi only download</string>
    <string name="settings_wifi_bottom">Only download content when Wi-Fi is turned on</string>
    <string name="settings_make_courses_visible_top">Make courses visible to friends</string>
    <string name="settings_make_courses_visible_bottom">Allow my friends to see what courses I’m taking</string>
    <string name="settings_facebook_login">Facebook login</string>
    <string name="settings_facebook_login_body_logged_in">Currently logged in as {username}</string>
    <string name="settings_facebook_login_body_logged_out">Log in with your Facebook account</string>
    <string name="settings_facebook_login_error">Unable to contact Facebook</string>
    <string name="settings_facebook_login_fetch">Contacting Facebook...</string>
    <string name="settings_facebook_login_btn">Log in</string>
    <string name="settings_facebook_logout_btn">Log out</string>
    <string name="share_certificate_button">Share your certificate</string>
    <string name="share_certificate_message">I just earned a Certificate on {platform_name}! Check it out: {certificate_url}</string>
    <string name="tab_label_certificate">Certificate</string>
    <string name="share_certificate_popup_header">Share your certificate via…</string>
    <string name="group_list_members">Members {members}</string>
    <string name="need_data">This feature requires an active internet connection.</string>
    <string name="email_username">User name or e-mail address</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Sign In</string>
    <string name="login_btn">Sign in button</string>
    <string name="progressText">Please wait....</string>
    <string name="signing_in">Signing In...</string>
    <string name="error_message">Error Message</string>
    <string name="error_heading">The following error occurred while logging you in</string>
    <string name="login_failed">Please make sure that your user name or e-mail address and password are correct and try again.</string>
    <string name="login_failed_no_grant">This account has not been activated. Check your e-mail for activation instructions.</string>
    <string name="new_user">Need an account?</string>
    <string name="by_signing_up">By signing in to this app, you agree to the </string>
    <string name="licensing_agreement">{platform_name} Terms of Service and Honor Code</string>
    <string name="login_title">Sign in to {platform_name}</string>
    <string name="close">Close</string>
    <string name="dropdown_list_prefix">Dropdown list.</string>
    <string name="action_settings">Settings</string>
    <string name="label_my_courses">My Courses</string>
    <string name="label_my_videos">My Videos</string>
    <string name="label_find_courses">Find Courses</string>
    <string name="label_my_groups">My Study Groups</string>
    <string name="label_submit_feedback">Submit Feedback</string>
    <string name="toggle_turn_on">ON</string>
    <string name="toggle_turn_off">OFF</string>
    <string name="logout">Logout</string>
    <string name="settings_txt">Settings</string>
    <string name="label_version">Version</string>
    <string name="label_settings">My Settings</string>
    <string name="confirm_dialog_title_help">Reset Password</string>
    <string name="success_dialog_title_help">Password reset e-mail sent</string>
    <string name="title_reset_password_failed">Reset Password Error</string>
    <string name="wifi_dialog_title_help">Allow cellular download</string>
    <string name="success_dialog_message_help">We’ve sent a message with password reset instructions to your e-mail address. 
        If you don’t see it in the next few minutes, make sure to check your spam folder.</string>
    <string name="confirm_dialog_message_help">Enter the e-mail address for your account, and we’ll send you instructions to reset your password.</string>
    <string name="wifi_dialog_message_help">Allow your device to download videos over your cellular connection when Wi-Fi is not available. Data charges may apply.</string>
    <string name="delete_dialog_title_help">Confirm Delete</string>
    <plurals name="delete_video_dialog_msg">
        <item quantity="one">Are you sure you want to delete this video?</item>
        <item quantity="other">Are you sure you want to delete these videos?</item>
    </plurals>
    <string name="delete_successful_dialog_title_help">Delete</string>
    <string name="leaving_app_data_title">Leaving the {platform_name} App</string>
    <string name="leaving_app_data_message">If you leave the app, you will no longer be viewing free {platform_name} content. Data charges may apply.</string>
    <string name="reset_dialog_title">Reset Title</string>
    <string name="end_user_title">End User License Agreement</string>
    <string name="courseware_title">Courseware</string>
    <string name="courseware_subtitle">Access videos and assignments</string>
    <string name="discussion_title">Discussion</string>
    <string name="discussion_subtitle">Join the conversation</string>
    <string name="handouts_title">Handouts</string>
    <string name="handouts_subtitle">Find important course information</string>
    <string name="announcement_title">Announcements</string>
    <string name="announcement_subtitle">Keep up with the latest news</string>
    <string name="school_code">School Code</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="new_course_content">New Course Content</string>
    <string name="label_starting">Starting - {date}</string>
    <string name="label_ended">Ended - {date}</string>
    <string name="label_ending">Ending - {date}</string>
    <string name="label_my_friends_courses">My Friends’ Courses</string>
    <string name="course_friends_also_enrolled">Friends also enrolled in this course</string>
    <string name="course_view_modes">Course View Modes</string>
    <string name="course_view_mode_videos_only">Videos Only</string>
    <string name="course_view_mode_full_course">Full Course</string>
    <string name="course_view_on_web">View on Web</string>
    <string name="course_change_mode">Mode picker</string>
    <string name="course_content">Course Content</string>
    <string name="chapter_name">Course Name</string>
    <string name="tab_label_courseware">Courseware</string>
    <string name="tab_label_announcement">Announcements</string>
    <string name="tab_label_handouts">Handouts</string>
    <string name="tab_label_course_info">Course Info</string>
    <string name="last_accessed">Last Accessed</string>
    <string name="no_chapter_text">No courseware is currently available.</string>
    <string name="no_courses_to_display">You have not registered for any courses</string>
    <string name="no_announcements_to_display">There are currently no announcements for this course.</string>
    <string name="no_handouts_to_display">There are currently no handouts for this course.</string>
    <string name="no_information_to_display">Additional course information is currently unavailable.</string>
    <string name="discussion_topics_title">Discussion topics</string>
    <string name="topics_search">Search all posts</string>
    <string name="discussion_posts_search_title">Search results</string>
    <string name="discussion_posts_refine">Refine:</string>
    <string name="discussion_post_create_new_post">Create a new post</string>
    <string name="discussion_post_create_new_comment">@string/discussion_add_comment_title</string>
    <string name="discussion_posts_filter_all_posts">All Posts</string>
    <string name="discussion_posts_filter_unread_posts">Unread</string>
    <string name="discussion_posts_filter_unanswered_posts">Unanswered</string>
    <string name="discussion_posts_sort_recent_activity">Recent Activity</string>
    <string name="discussion_posts_sort_most_activity">Most Activity</string>
    <string name="discussion_posts_sort_most_votes">Most Votes</string>
    <string name="discussion_priviledged_author_label_ta">Community TA</string>
    <string name="discussion_priviledged_author_label_staff">Staff</string>
    <string name="discussion_priviledged_author_attribution">By %s</string>
    <string name="post_attribution">{time} by {author} {author_label}</string>
    <string name="discussion_post_visibility_cohort">This post is visible only to {cohort}.</string>
    <string name="discussion_post_visibility_everyone">This post is visible to everyone.</string>
    <string name="assessment_not_available">This interactive component isn’t yet available on mobile.</string>
    <string name="assessment_explore_on_web">Explore other parts of this course or view this on web.</string>
    <string name="assessment_view_on_web">View on Web</string>
    <string name="offline_text">Offline Mode</string>
    <string name="video_player_view_on_web">View on web</string>
    <string name="video_player_share">Share</string>
    <string name="video_player_next">Next</string>
    <string name="video_player_previous">Previous</string>
    <string name="video_player_pause">Pause</string>
    <string name="video_player_rewind">Rewind</string>
    <string name="video_player_settings">Settings</string>
    <string name="video_player_enter_fullscreen">Enter fullscreen mode</string>
    <string name="done_text">Done</string>
    <string name="unread_text">{unread_count} Unread</string>
    <string name="find_course_text">Looking for a new challenge?</string>
    <string name="find_course_btn_text">Find a mobile-friendly course</string>
    <string name="course_not_listed_text">Don’t see one of your courses?</string>
    <string name="course_not_listed_btn">Don’t see one of your courses button</string>
    <string name="already_have_an_account">Already have an account? Sign in</string>
    <string name="sign_up_and_learn">Sign up and start learning</string>
</resources>