<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.edx.mobile.MainActivity" >

    <item
        android:id="@+id/offline"
        android:actionLayout="@layout/view_offline_text"
        android:showAsAction="always"
        android:title="@string/offline_text"/>
    
   <item
        android:id="@+id/progress_download"
        android:actionLayout="@layout/view_progress_download_btn"
        android:showAsAction="always"
        android:title="@string/action_settings"
        />

   <item
        android:id="@+id/delete_checkbox"
        android:actionLayout="@layout/view_actionbar_checkbox"
        android:showAsAction="always"
        android:title="@string/label_delete"/>

    <item
        android:id="@+id/done_btn"
        android:actionLayout="@layout/view_done_btn"
        android:showAsAction="always"
        android:title="@string/done_text"
        android:visible="false"
        />

    <item
        android:id="@+id/unread_display"
        android:actionLayout="@layout/view_unread_text"
        android:showAsAction="always"
        android:title="@string/unread_text"
        android:visible="false"
        />
   
</menu>