<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.

-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/video_top_bar"
        style="@style/video_player_panel"
        android:layout_gravity="top">

        <org.edx.mobile.view.custom.ETextView
            android:id="@+id/video_title"
            style="@style/video_player_title"
            tools:targetApi="17"
            tools:text="This is a very long video title meant to be truncated from end" />

        <org.edx.mobile.third_party.iconify.IconButton
            android:id="@+id/share_btn"
            style="@style/video_player_top_control"
            android:contentDescription="@string/video_player_share"
            app:iconName="fa_facebook_square"
            tools:targetApi="17" />

        <org.edx.mobile.third_party.iconify.IconButton
            android:id="@+id/lms_btn"
            style="@style/video_player_top_control"
            android:contentDescription="@string/video_player_view_on_web"
            app:iconName="fa_share_square_o"
            tools:targetApi="17" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel_bottom"
        style="@style/video_player_panel"
        android:layout_gravity="bottom"
        android:layoutDirection="ltr"
        android:padding="7dp"
        tools:targetApi="17">

        <org.edx.mobile.third_party.iconify.IconButton
            android:id="@+id/rew"
            style="@style/video_player_bottom_control"
            android:contentDescription="@string/video_player_rewind"
            app:iconName="fa_history"
            tools:targetApi="17" />

        <SeekBar
            android:id="@+id/mediacontroller_progress"
            style="@style/video_player_seekbar_control"
            tools:progress="30"
            tools:secondaryProgress="70"
            tools:targetApi="17" />

        <org.edx.mobile.view.custom.ETextView
            android:id="@+id/time_current"
            style="@style/video_duration_text"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/video_player_duration_padding"
            android:paddingRight="0dp"
            android:paddingStart="@dimen/video_player_duration_padding"
            tools:targetApi="17"
            tools:text="00:00" />

        <org.edx.mobile.view.custom.ETextView
            android:id="@+id/time_slash"
            style="@style/video_duration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_slash" />

        <org.edx.mobile.view.custom.ETextView
            android:id="@+id/time"
            style="@style/video_duration_text"
            android:paddingEnd="@dimen/video_player_duration_padding"
            android:paddingLeft="0dp"
            android:paddingRight="@dimen/video_player_duration_padding"
            android:paddingStart="0dp"
            android:textStyle="bold"
            tools:targetApi="17"
            tools:text="02:05" />

        <org.edx.mobile.third_party.iconify.IconButton
            android:id="@+id/settings"
            style="@style/video_player_bottom_control"
            android:contentDescription="@string/video_player_settings"
            app:iconName="fa_cog" />


        <org.edx.mobile.third_party.iconify.IconButton
            android:id="@+id/fullscreen"
            style="@style/video_player_bottom_control"
            android:contentDescription="@string/video_player_enter_fullscreen"
            app:iconName="fa_compress" />
    </LinearLayout>

    <!-- Put play/pause button to the center of player -->

    <org.edx.mobile.third_party.iconify.IconButton
        android:id="@+id/pause"
        style="@style/video_player_play_pause_button"
        android:contentDescription="@string/video_player_pause"
        app:iconName="fa_pause" />

    <org.edx.mobile.third_party.iconify.IconButton
        android:id="@+id/prev"
        style="@style/video_player_side_control"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/video_player_control_left_margin"
        android:layout_marginStart="@dimen/video_player_control_left_margin"
        android:contentDescription="@string/video_player_previous"
        app:iconName="fa_chevron_circle_left"
        tools:targetApi="17" />

    <org.edx.mobile.third_party.iconify.IconButton
        android:id="@+id/next"
        style="@style/video_player_side_control"
        android:layout_gravity="center_vertical|right"
        android:layout_marginEnd="@dimen/video_player_control_right_margin"
        android:layout_marginRight="@dimen/video_player_control_right_margin"
        android:contentDescription="@string/video_player_next"
        app:iconName="fa_chevron_circle_right"
        tools:targetApi="17" />

</FrameLayout>